fix flag vertical aligning

--- a/src/components/widgets/DiscordEmbed.css
+++ b/src/components/widgets/DiscordEmbed.css
@@ -4,6 +4,7 @@
   aspect-ratio: 1/1;
   margin-right: 15px;
   user-select: none;
+  vertical-align: middle;
 }
 
 .discord th {
