--- a/src/components/widgets/Flags.css
+++ b/src/components/widgets/Flags.css
@@ -1,6 +1,7 @@
 .flag-icon {
   display: inline-block;
   width: 24px;
+  height: 18px;
   aspect-ratio: 4/3;
   margin-right: 6px;
 }
@@ -9,6 +10,7 @@
 .flag-icon img {
   height: 100%;
   width: 100%;
+  vertical-align: middle;
 }
 
 .MuiChip-root > .flag-icon {
